--- a/subgraph-experience/src/main/resources/application.properties
+++ b/subgraph-experience/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8082
 
-spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.enabled=false
 spring.graphql.graphiql.path=/graphiql
