--- a/supergraph/resume-supergraph-rover-config.yaml
+++ b/supergraph/resume-supergraph-rover-config.yaml
@@ -18,3 +18,7 @@ subgraphs:
     routing_url: http://localhost:8083/graphql
     schema:
       file: ../subgraph-skills/src/main/resources/graphql/skills.graphqls
+  education:
+    routing_url: http://localhost:8084/graphql
+    schema:
+      file: ../subgraph-education/src/main/resources/graphql/education.graphqls
