--- a/supergraph/resume-supergraph-rover-config.yaml
+++ b/supergraph/resume-supergraph-rover-config.yaml
@@ -4,7 +4,7 @@
 #
 # See https://www.apollographql.com/docs/federation/quickstart/local-composition/#1-provide-subgraph-details
 
-federation_version: 2
+federation_version: =2.9.3
 subgraphs:
   resume:
     routing_url: http://localhost:8082/graphql
